@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Added Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::EOL
+  - Added Test::EOL release test
   - Also scan files under t and xt with Test::Spelling
   - Allow travis_ci_ignore_perl configuration option for dist.ini
   - Added Dist::Zilla::Plugin::Author::SKIRMESS::Perl::Tidy::RC
